Bug #33146 CHECKSUM TABLE is not interruptable by KILL QUERY statement
Submitted: 11 Dec 2007 18:21 Modified: 12 May 2009 2:07
Reporter: Valeriy Kravchuk Email Updates:
Status: Closed
Category:Server: DDL Severity:S3 (Non-critical)
Version:5.0.50, 5.0.52 OS:Any
Assigned to: Staale Smedseng Target Version:5.0+
Tags: checksum table
Triage: Triaged: D3 (Medium) / R2 (Low) / E3 (Medium)

[11 Dec 2007 18:21] Valeriy Kravchuk
Description:
When running checksum table on a large table one can not kill the command after it starts
running (with KILL QUERY). 

This is NOT documented neither at http://dev.mysql.com/doc/refman/5.0/en/kill.html nor at
http://dev.mysql.com/doc/refman/5.0/en/checksum-table.html.

How to repeat:
Run 

CHECKSUM TABLE t EXTENDED;

on a big enough (InnoDB) table (million of rows or so). Try to execute:

KILL QUERY thread_id;

from the other connection.

Suggested fix:
Implement KILL QUERY for CHECKSUM TABLE (or document clearly that it does NOT work).
[7 Oct 2008 20:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55626

2723 Konstantin Osipov	2008-10-08
      Bug #33146 CHECKSUM TABLE is not interruptable by KILL QUERY statement
      
      Check that we have been killed in the checksum loop and abort.
[7 Oct 2008 20:48] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55629

2724 Konstantin Osipov	2008-10-08
      Bug #33146 CHECKSUM TABLE is not interruptable by KILL QUERY statement
      
      Check for thd->killed in CHECKSUM loop.
[7 Oct 2008 20:49] Konstantin Osipov
Queued into 6.0-runtime.
[24 Oct 2008 1:18] Bugs System
Pushed into 6.0.8-alpha  (revid:kostja@sun.com-20081007204800-vichx8ukada6m4n4) (version
source revid:kostja@sun.com-20081007204800-vichx8ukada6m4n4) (pib:5)
[26 Oct 2008 0:44] Paul DuBois
Noted in 6.0.8 changelog.

CHECKSUM TABLE was not killable with KILL QUERY.

Setting report to NDI pending push into 5.1.x.
[22 Apr 2009 12:15] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/72654

2730 Staale Smedseng	2009-04-22
      Bug#33146 CHECKSUM TABLE is not interruptable by KILL 
      QUERY statement
      
      Commit 55629 applied to 5.0-bugteam: Check for thd->killed 
      in CHECKSUM loop. Merge into 5.1 pending approval.
[23 Apr 2009 17:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/72725

2730 Staale Smedseng	2009-04-23
      Bug#33146 CHECKSUM TABLE is not interruptable by KILL 
      QUERY statement
            
      Commit 55629 applied to 5.0-bugteam and 5.1-bugteam: 
      Check for thd->killed in CHECKSUM loop.
[5 May 2009 18:54] Bugs System
Pushed into 5.0.82 (revid:davi.arnaut@sun.com-20090505184158-dvmedh8n472y8np5) (version
source revid:davi.arnaut@sun.com-20090505184158-dvmedh8n472y8np5) (merge vers: 5.0.82)
(pib:6)
[5 May 2009 19:43] Bugs System
Pushed into 5.1.35 (revid:davi.arnaut@sun.com-20090505190206-9xmh7dlc6kom8exp) (version
source revid:davi.arnaut@sun.com-20090505190206-9xmh7dlc6kom8exp) (merge vers: 5.1.35)
(pib:6)
[6 May 2009 14:09] Bugs System
Pushed into 6.0.12-alpha (revid:svoj@sun.com-20090506125450-yokcmvqf2g7jhujq) (version
source revid:staale.smedseng@sun.com-20090423175856-tvhtviwx8rz9byiq) (merge vers:
6.0.11-alpha) (pib:6)
[12 May 2009 2:07] Paul DuBois
Noted in 5.0.82, 5.1.35 changelogs.
[15 Jun 2009 8:29] Bugs System
Pushed into 5.1.35-ndb-6.3.26 (revid:jonas@mysql.com-20090615074202-0r5r2jmi83tww6sf)
(version source revid:jonas@mysql.com-20090615070837-9pccutgc7repvb4d) (merge vers:
5.1.35-ndb-6.3.26) (pib:6)
[15 Jun 2009 9:09] Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jonas@mysql.com-20090615074335-9hcltksp5cu5fucn)
(version source revid:jonas@mysql.com-20090615072714-rmfkvrbbipd9r32c) (merge vers:
5.1.35-ndb-7.0.7) (pib:6)
[15 Jun 2009 9:50] Bugs System
Pushed into 5.1.35-ndb-6.2.19 (revid:jonas@mysql.com-20090615061520-sq7ds4yw299ggugm)
(version source revid:jonas@mysql.com-20090615054654-ebgpz7elwu1xj36j) (merge vers:
5.1.35-ndb-6.2.19) (pib:6)