Bug #33146 CHECKSUM TABLE is not interruptable by KILL QUERY statement

Check for thd->killed in CHECKSUM loop.